--- a/kotlin-wrapper/ffmpegandroid/build.gradle
+++ b/kotlin-wrapper/ffmpegandroid/build.gradle
@@ -1,3 +1,5 @@
+import org.apache.tools.ant.taskdefs.condition.Os
+
 apply plugin: 'com.android.library'
 
 android {
@@ -9,11 +11,6 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-    }
-    sourceSets.main {
-        assets.srcDirs = ['assets']
-        jni.srcDirs = [] //disable automatic ndk-build
-        jniLibs.srcDirs = ['libs']
     }
 
     buildTypes {
@@ -28,10 +25,44 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+    }
+
+    sourceSets.main {
+        assets.srcDirs = ['ffmpeg']
+        jni.srcDirs = [] // disable automatic ndk-build
+        jniLibs.srcDir "$buildDir/ndk/libs"
+    }
+
+    task ndkBuild(type: Exec) {
+        workingDir file('src/main')
+        commandLine getNdkBuildCmd(), "NDK_OUT=$buildDir/ndk/obj", "NDK_LIBS_OUT=$buildDir/ndk/libs"
+    }
+
+    task ndkClean(type: Exec) {
+        workingDir file('src/main')
+        commandLine getNdkBuildCmd(), 'clean'
+    }
+
+    tasks.withType(JavaCompile) {
+        compileTask -> compileTask.dependsOn ndkBuild
+    }
+
+    clean.dependsOn ndkClean
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+}
+
+def getNdkBuildCmd() {
+    def ndkDir = android.ndkDirectory
+
+    if (Os.isFamily(Os.FAMILY_WINDOWS))
+        return "$ndkDir/ndk-build.cmd"
+    else
+        return "$ndkDir/ndk-build"
 }
 
 task sourcesJar(type: Jar) {
@@ -48,6 +79,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
+
 artifacts {
     archives javadocJar
     archives sourcesJar
