--- a/kotlin-wrapper/ffmpegandroid/build.gradle
+++ b/kotlin-wrapper/ffmpegandroid/build.gradle
@@ -83,7 +83,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 artifacts {
-    archives javadocJar
+    //archives javadocJar
     archives sourcesJar
 }
 repositories {
