--- a/kotlin-wrapper/app/build.gradle
+++ b/kotlin-wrapper/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 25
@@ -21,4 +22,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.+'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    // compile project(path: ':ffmpegandroid')
+    debugCompile project(path: ':ffmpegandroid', configuration: "debug") // force compile debug module
+    releaseCompile project(path: ':ffmpegandroid', configuration: "release")
+}
+repositories {
+    mavenCentral()
 }
