--- a/kotlin-wrapper/app/build.gradle
+++ b/kotlin-wrapper/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "com.github.fourtalk.kotlin_wrapper"
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -20,13 +21,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.+'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    // compile project(path: ':ffmpegandroid')
-    debugCompile project(path: ':ffmpegandroid', configuration: "debug") // force compile debug module
-    releaseCompile project(path: ':ffmpegandroid', configuration: "release")
+    implementation project(path: ':ffmpegandroid')
+//    debugImplementation project(path: ':ffmpegandroid', configuration: "debug") // force compile debug module
+//    releaseImplementation project(path: ':ffmpegandroid', configuration: "release")
 }
 repositories {
     mavenCentral()
