--- a/kotlin-wrapper/ffmpegandroid/build.gradle
+++ b/kotlin-wrapper/ffmpegandroid/build.gradle
@@ -32,6 +32,10 @@ android {
     productFlavors {
     }
 
+    aaptOptions {
+        ignoreAssetsPattern "update.sh"
+    }
+
     sourceSets.main {
         assets.srcDirs = ['ffmpeg']
         jni.srcDirs = [] // disable automatic ndk-build
